[package]
name = "cache"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
utoipa = { version = "2.2.0", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "2.0.1", features = ["rocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
log = "0.4"
rand = "0.8"


tonic = "0.8"
prost = "0.11"

anyhow = "1.0"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "local-offset"] }
crossbeam = "0.8"
lazy_static = "1.4"
tokio = { version = "1.20", features = ["full"] }
moka = { version = "0.9", features = ["future"] }
snap = "1"
# crypto SM
libsm = "0.5.0"
efficient-sm2 = "0.1"
# crypto ETH
aes = "0.8"
ctr = "0.9"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = { version = "0.24", features = ["rand-std", "recovery"] }
tentacle-multiaddr = "0.3"
tempfile = "3.3"
toml = "0.5"
tracing = "0.1"
tracing-opentelemetry = "0.18"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs.git" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs.git" }

redis = "0.21.5"
r2d2 = "*"
r2d2_redis = "*"
thiserror =  "1"
msgpack-schema = "0.4.2"
tokio-test = "0.4.2"

[build-dependencies]
tonic-build = "0.8"
